Add imputation code

--- a/notebooks/consumer_preprocess.ipynb
+++ b/notebooks/consumer_preprocess.ipynb
@@ -43,14 +43,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/10/13 21:52:57 WARN Utils: Your hostname, DESKTOP-F216TKE resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
-      "24/10/13 21:52:57 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/10/16 16:25:48 WARN Utils: Your hostname, Alans-MacBook-Air-4.local resolves to a loopback address: 127.0.0.1; using 192.168.0.52 instead (on interface en0)\n",
+      "24/10/16 16:25:48 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/10/13 21:52:57 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/10/13 21:52:58 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "24/10/13 21:52:58 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+      "24/10/16 16:25:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/10/16 16:25:50 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -68,18 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tbl_consumer =  spark.read.option(\"header\", True).option(\"delimiter\", \"|\").csv(\".././data/tables/tbl_consumer.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -114,6 +110,7 @@
     }
    ],
    "source": [
+    "tbl_consumer =  spark.read.option(\"header\", True).option(\"delimiter\", \"|\").csv(\".././data/landing/tables/tbl_consumer.csv\")\n",
     "tbl_consumer.show()"
    ]
   },
@@ -126,36 +123,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tbl_consumer = tbl_consumer.drop(\"address\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "499999"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "tbl_consumer = tbl_consumer.drop(\"address\")\n",
     "tbl_consumer.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +187,13 @@
       "+-----------+\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -200,25 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tbl_consumer = tbl_consumer.filter(F.col(\"state\").isin([\"NSW\", \"WA\", \"NT\", \"VIC\", \"TAS\", \"QLD\", \"SA\",   \"ACT\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tbl_consumer = tbl_consumer.filter(F.col(\"gender\").isin([\"Female\", \"Male\", \"Undisclosed\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +221,8 @@
     }
    ],
    "source": [
+    "tbl_consumer = tbl_consumer.filter(F.col(\"state\").isin([\"NSW\", \"WA\", \"NT\", \"VIC\", \"TAS\", \"QLD\", \"SA\", \"ACT\"]))\n",
+    "tbl_consumer = tbl_consumer.filter(F.col(\"gender\").isin([\"Female\", \"Male\", \"Undisclosed\"]))\n",
     "tbl_consumer.printSchema()"
    ]
   },
@@ -270,35 +257,6 @@
     }
    ],
    "source": [
-    "tbl_consumer.filter(\n",
-    "    ((F.col(\"postcode\") >= 1000) & (F.col(\"postcode\") <= 1999)) |  \n",
-    "    ((F.col(\"postcode\") >= 2000) & (F.col(\"postcode\") <= 2599)) |\n",
-    "    ((F.col(\"postcode\") >= 2619) & (F.col(\"postcode\") <= 2899)) |\n",
-    "    ((F.col(\"postcode\") >= 2921) & (F.col(\"postcode\") <= 2999)) |\n",
-    "    ((F.col(\"postcode\") >= 200) & (F.col(\"postcode\") <= 299)) |  \n",
-    "    ((F.col(\"postcode\") >= 2600) & (F.col(\"postcode\") <= 2618)) |\n",
-    "    ((F.col(\"postcode\") >= 2900) & (F.col(\"postcode\") <= 2920)) |\n",
-    "    ((F.col(\"postcode\") >= 3000) & (F.col(\"postcode\") <= 3999)) |\n",
-    "    ((F.col(\"postcode\") >= 8000) & (F.col(\"postcode\") <= 8999)) |  \n",
-    "    ((F.col(\"postcode\") >= 4000) & (F.col(\"postcode\") <= 4999)) |\n",
-    "    ((F.col(\"postcode\") >= 9000) & (F.col(\"postcode\") <= 9999)) |  \n",
-    "    ((F.col(\"postcode\") >= 5000) & (F.col(\"postcode\") <= 5799)) |\n",
-    "    ((F.col(\"postcode\") >= 5800) & (F.col(\"postcode\") <= 5999)) |  \n",
-    "    ((F.col(\"postcode\") >= 6000) & (F.col(\"postcode\") <= 6797)) |\n",
-    "    ((F.col(\"postcode\") >= 6800) & (F.col(\"postcode\") <= 6999)) |  \n",
-    "    ((F.col(\"postcode\") >= 7000) & (F.col(\"postcode\") <= 7799)) |\n",
-    "    ((F.col(\"postcode\") >= 7800) & (F.col(\"postcode\") <= 7999)) |  \n",
-    "    ((F.col(\"postcode\") >= 800) & (F.col(\"postcode\") <= 899)) |\n",
-    "    ((F.col(\"postcode\") >= 900) & (F.col(\"postcode\") <= 999))\n",
-    ").count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sdf = tbl_consumer.filter(\n",
     "    ((F.col(\"postcode\") >= 1000) & (F.col(\"postcode\") <= 1999)) |  \n",
     "    ((F.col(\"postcode\") >= 2000) & (F.col(\"postcode\") <= 2599)) |\n",
@@ -319,32 +277,13 @@
     "    ((F.col(\"postcode\") >= 7800) & (F.col(\"postcode\") <= 7999)) |  \n",
     "    ((F.col(\"postcode\") >= 800) & (F.col(\"postcode\") <= 899)) |\n",
     "    ((F.col(\"postcode\") >= 900) & (F.col(\"postcode\") <= 999))\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "499690"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    ")\n",
     "sdf.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +349,7 @@
        "only showing top 20 rows"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -454,6 +393,13 @@
       "Number of unique consumer_id: 499999\n",
       "Number of counts after preprocessing: 499999\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -464,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -506,9 +452,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_consumer.filter(F.isnull('consumer_name')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -521,7 +501,7 @@
     }
    ],
    "source": [
-    "tbl_consumer.filter(F.isnull('consumer_name')).count()"
+    "tbl_consumer.filter(F.isnull('gender')).count()"
    ]
   },
   {
@@ -529,6 +509,13 @@
    "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -541,7 +528,7 @@
     }
    ],
    "source": [
-    "tbl_consumer.filter(F.isnull('gender')).count()"
+    "tbl_consumer.filter(F.isnull('postcode')).count()"
    ]
   },
   {
@@ -561,7 +548,7 @@
     }
    ],
    "source": [
-    "tbl_consumer.filter(F.isnull('postcode')).count()"
+    "tbl_consumer.filter(F.isnull('consumer_id')).count()"
    ]
   },
   {
@@ -576,26 +563,6 @@
       ]
      },
      "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tbl_consumer.filter(F.isnull('consumer_id')).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,6 +583,13 @@
    "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 55:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -647,10 +621,17 @@
       "only showing top 20 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
-    "consumer_details = spark.read.parquet(\".././data/tables/consumer_user_details.parquet\")\n",
+    "consumer_details = spark.read.parquet(\".././data/landing/tables/consumer_user_details.parquet\")\n",
     "consumer_details.show()"
    ]
   },
@@ -765,6 +746,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "499999"
@@ -785,6 +773,13 @@
    "execution_count": 33,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -913,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -950,13 +945,13 @@
     }
    ],
    "source": [
-    "consumer_fraud = spark.read.option(\"header\", True).csv(\".././data/tables/consumer_fraud_probability.csv\")\n",
+    "consumer_fraud = spark.read.option(\"header\", True).csv(\".././data/landing/tables/consumer_fraud_probability.csv\")\n",
     "consumer_fraud.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1023,26 +1018,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "consumer_fraud.filter(F.col('fraud_probability') < 0).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -1053,6 +1028,26 @@
       ]
      },
      "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "consumer_fraud.filter(F.col('fraud_probability') < 0).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2109,7 @@
        " ...]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,9 +2120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "detailsuserid = consumer_details.select(F.col('user_id')).distinct()\n",
     "detailsuserid = detailsuserid.toPandas()\n",
@@ -2136,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2153,9 +2156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "consumersusers = tbl_consumer.select(F.col('consumer_id')).distinct()\n",
     "consumersusers = consumersusers.toPandas()\n",
@@ -2164,9 +2175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "detailsconid = consumer_details.select(F.col('consumer_id')).distinct()\n",
     "detailsconid = detailsconid.toPandas()\n",
@@ -2175,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2192,16 +2211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "consumer_details.write.mode('overwrite').parquet('.././data/curated/consumer_details')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2282,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2311,9 +2338,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "consumer_fraud.write.mode('overwrite').parquet('.././data/curated/consumer_fraud')"
    ]
@@ -2335,7 +2370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
