--- a/notebooks/merchant_preprocess.ipynb
+++ b/notebooks/merchant_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,20 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/10/13 21:51:49 WARN Utils: Your hostname, DESKTOP-F216TKE resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
-      "24/10/13 21:51:49 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/10/16 16:30:36 WARN Utils: Your hostname, Alans-MacBook-Air-4.local resolves to a loopback address: 127.0.0.1; using 192.168.0.52 instead (on interface en0)\n",
+      "24/10/16 16:30:36 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/10/13 21:51:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/10/13 21:51:51 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "24/10/16 16:30:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/10/16 16:30:39 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +96,13 @@
     }
    ],
    "source": [
-    "tbl_merchants = spark.read.parquet(\".././data/tables/tbl_merchants.parquet\")\n",
+    "tbl_merchants = spark.read.parquet(\".././data/landing/tables/tbl_merchants.parquet\")\n",
     "tbl_merchants.show(truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +139,13 @@
     }
    ],
    "source": [
-    "merchant_fraud = spark.read.option(\"header\", True).csv(\".././data/tables/merchant_fraud_probability.csv\")\n",
+    "merchant_fraud = spark.read.option(\"header\", True).csv(\".././data/landing/tables/merchant_fraud_probability.csv\")\n",
     "merchant_fraud.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +206,7 @@
        "4026"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -256,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'23686790459', '14827550074', '75892370170', '99989036621', '81146325646', '29674997261', '57564805948', '82999039227', '19010030815', '73052515151', '94311056026', '83220249221', '59258669983'}\n"
+      "{'99989036621', '83220249221', '94311056026', '14827550074', '23686790459', '29674997261', '19010030815', '81146325646', '73052515151', '59258669983', '82999039227', '57564805948', '75892370170'}\n"
      ]
     }
    ],
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -412,53 +411,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merchant_fraud.filter(F.col('fraud_probability') < 0).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merchant_fraud.filter(F.col('fraud_probability') >= 100).count()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check for null values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -474,7 +426,7 @@
     }
    ],
    "source": [
-    "merchant_fraud.filter(F.isnull('merchant_abn')).count()\n"
+    "merchant_fraud.filter(F.col('fraud_probability') < 0).count()"
    ]
   },
   {
@@ -494,7 +446,14 @@
     }
    ],
    "source": [
-    "merchant_fraud.filter(F.isnull('fraud_probability')).count()"
+    "merchant_fraud.filter(F.col('fraud_probability') >= 100).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check for null values"
    ]
   },
   {
@@ -514,7 +473,7 @@
     }
    ],
    "source": [
-    "merchant_fraud.filter(F.isnull('order_datetime')).count()"
+    "merchant_fraud.filter(F.isnull('merchant_abn')).count()\n"
    ]
   },
   {
@@ -534,7 +493,7 @@
     }
    ],
    "source": [
-    "tbl_merchants.filter(F.isnull('merchant_abn')).count()"
+    "merchant_fraud.filter(F.isnull('fraud_probability')).count()"
    ]
   },
   {
@@ -554,7 +513,7 @@
     }
    ],
    "source": [
-    "tbl_merchants.filter(F.isnull('tags')).count()"
+    "merchant_fraud.filter(F.isnull('order_datetime')).count()"
    ]
   },
   {
@@ -574,12 +533,52 @@
     }
    ],
    "source": [
-    "tbl_merchants.filter(F.isnull('name')).count()"
+    "tbl_merchants.filter(F.isnull('merchant_abn')).count()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.filter(F.isnull('tags')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_merchants.filter(F.isnull('name')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,9 +603,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "tbl_merchants.write.mode('overwrite').parquet('.././data/curated/tbl_merchants')"
    ]
@@ -628,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
