--- a/notebooks/imputation.ipynb
+++ b/notebooks/imputation.ipynb
@@ -197,7 +197,7 @@
     "# Merchant Fraud Imputation Model\n",
     "A KNN model is used to impute the fraud values for both merchants and consumers, using the tags of the merchant, the state of the consumer, the dollar value of the transaction, and the merchant's take rate.\n",
     "\n",
-    "The following cell demonstrates the model, and gives its root mean squared error."
+    "The following cell demonstrates the model, and gives its root mean squared error, which is relatively low."
    ]
   },
   {
@@ -336,7 +336,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merchant Fraud Imputation Model"
+    "# Merchant Fraud Imputation Model\n",
+    "The following graph shows the predictions for consumer fraud. We can see that this is less accurate than for merchant fraud."
    ]
   },
   {
