--- a/notebooks/rankings.ipynb
+++ b/notebooks/rankings.ipynb
@@ -10656,6 +10656,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Segments\n",
+    "Looking at the segments, we can see that the high price, low sales segment produces the lowest expected revenue, while the low price, high sales produces the most. \n",
+    "\n",
+    "Additionally, the XGBoost model is worse at predicting expected revenue for the low sales segment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -10692,7 +10702,7 @@
     "plt.xlabel(\"Expected Revenue Over Next 3 Months ($)\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.xlim(0)\n",
-    "plt.grid()\n"
+    "plt.grid()"
    ]
   },
   {
