added readme link and altered summary

--- a/notebooks/addingexternal.ipynb
+++ b/notebooks/addingexternal.ipynb
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#full_transactions.write.mode('overwrite').parquet('.././data/curated/full_transactions')"
+    "full_transactions.write.mode('overwrite').parquet('.././data/curated/full_transactions')"
    ]
   },
   {
