fixed graph titles and added markdown for notebooks

--- a/notebooks/addingexternal.ipynb
+++ b/notebooks/addingexternal.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook combines all the data related to transactions into one dataframe and adds the external data used to the transaction data. Links have been provided in the notebook and README.md. The names of files have not been changed from when they were downloaded. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -55,6 +62,13 @@
     "    .config('spark.executor.memory', '2g')\n",
     "    .getOrCreate()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding all merchant, consumer, fraud and transaction data into one dataframe."
    ]
   },
   {
@@ -353,6 +367,13 @@
    ],
    "source": [
     "full_transactions.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This file contains all the transaction data that has been joined."
    ]
   },
   {
@@ -1107,6 +1128,13 @@
    ],
    "source": [
     "full_transactions.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This file contains all transaction data along with the external data into one dataframe."
    ]
   },
   {
