--- a/notebooks/merchant_preprocess.ipynb
+++ b/notebooks/merchant_preprocess.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing Merchant Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook preprocesses the merchant data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -141,6 +155,13 @@
    "source": [
     "merchant_fraud = spark.read.option(\"header\", True).csv(\".././data/landing/tables/merchant_fraud_probability.csv\")\n",
     "merchant_fraud.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check datatypes and ensure that all merchant_abn's are properly referenced."
    ]
   },
   {
@@ -328,6 +349,13 @@
    ],
    "source": [
     "tbl_merchants.filter(F.col('merchant_abn') == '82999039227').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preprocess the merchant tags based on services and products, type of revenue and take rate."
    ]
   },
   {
