--- a/notebooks/transactions_preprocess.ipynb
+++ b/notebooks/transactions_preprocess.ipynb
@@ -65,6 +65,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join all transaction data into one dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -203,6 +210,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensure all datatypes are consistent across tables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -247,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check user_id"
+    "Check user_id is valid."
    ]
   },
   {
@@ -389,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check merchant_abn"
+    "Check merchant_abn is valid."
    ]
   },
   {
@@ -442,6 +456,13 @@
    "outputs": [],
    "source": [
     "tbl_merchants = tbl_merchants.withColumn('merchant_abn',F.col('merchant_abn').cast(StringType()) ) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find any merchant_abn's that have transactions for whom data has not been found."
    ]
   },
   {
@@ -1501,6 +1522,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of merchants we have is 4026."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -1537,7 +1565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
