--- a/notebooks/findings.ipynb
+++ b/notebooks/findings.ipynb
@@ -4568,7 +4568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sdf2.show()"
+    "sdf2.show()"
    ]
   },
   {
@@ -4584,7 +4584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sdf2.write.mode('overwrite').parquet('.././data/curated/filtered')"
+    "sdf2.write.mode('overwrite').parquet('.././data/curated/filtered')"
    ]
   },
   {
