--- a/notebooks/merchant_preprocess.ipynb
+++ b/notebooks/merchant_preprocess.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check datatypes and ensure that all merchant_abn's are properly referenced."
+    "## Check datatypes and ensure that all merchant_abn's are properly referenced."
    ]
   },
   {
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preprocess the merchant tags based on services and products, type of revenue and take rate."
+    "## Preprocess the merchant tags based on services and products, type of revenue and take rate."
    ]
   },
   {
@@ -617,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are no null values"
+    "There are no null values."
    ]
   },
   {
