--- a/notebooks/consumer_preprocess.ipynb
+++ b/notebooks/consumer_preprocess.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook Preprocesses The Consumer Data "
+    "This notebook preprocesses the consumer data."
    ]
   },
   {
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All postcodes are considered valid ; even those for sparesely populated islands "
+    "All postcodes are considered valid."
    ]
   },
   {
@@ -806,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check for Missing Values "
+    "## Check for Missing Values "
    ]
   },
   {
@@ -1067,7 +1067,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure all user_id's are properly referenced "
+    "## Ensure all user_ids are properly referenced "
    ]
   },
   {
@@ -2333,7 +2333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are no additional user_id's that have not been referenced "
+    "There are no additional `user_id`s that have not been referenced "
    ]
   },
   {
